# web-audit-tool

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  dashkit.py  mypy.ini  pyproject.toml  requirements.txt  run-site-lighthouse.py  site-dashboard.py  url-summary.py
.githooks/: pre-commit
dashkit/cli/: __init__.py  lighthouse.py  printer.py  tui.py
dashkit/framework/: status.py  test_utils.py  utils.py  views.py
dashkit/framework/presenters/: occurrence_tables.py  screenshot_occurrence_tables.py
dashkit/modules/lighthouse/: audits.py  categories.py  http.py  runner.py  test_audits.py
dashkit/services/: snapshots.py  workspaces.py
dashkit/tui/: app.py  parsers.py  sidebar.py
dashkit/views/: factory.py  sitesummary.py  urlsummary.py
docs/: Makefile  README.md  arch-code-diagram.mmd  conf.py  index.rst
src/: lighthouse.py
src/cli/: __init__.py  dashkit.py  lighthouse.py  printer.py
src/dashkit/: app.py  body.py  parsers.py  sidebar.py
src/framework/: test_utils.py  utils.py  views.py
src/framework/presenters/: occurrences_tables.py
src/helpers/: filenames.py
src/modules/lighthouse/: __init__.py  audits.py  categories.py  config.py  http.py  insights.py  providers.py  runner.py  status.py  terminal.py  views.py
src/sections/sitesummary/: dataprovider.py  view.py
src/sections/urlsummary/: dataprovider.py  view.py
src/services/: reports.py  workspaces.py
src/views/: factory.py  sitesummary.py  urlsummary.py
utils/: screenshot_runner.py
utils/docs/: conf.py  index.rst
workspaces/: .gitignore
(+10 files in other folders)
